Fix nav alignment

--- a/main.css
+++ b/main.css
@@ -30,13 +30,13 @@ html {
   border-radius: 30px;
 }
 
+.navbar-collapse {
+  flex-grow: 0;
+}
+
 @media screen and (max-width: 575px) {
   .section-1 {
     background-image: none;
-  }
-
-  .navbar {
-    background-color: var(--primary-color);
   }
 
   .navbar-toggler {
@@ -57,6 +57,12 @@ html {
 
   .nav-hidden {
     display: none;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .navbar {
+    background-color: var(--primary-color);
   }
 }
 
